# webqqdicebot

./: .gitignore  .gitmodules  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  main.cpp  webqqdicebot.prj  webqqdicebot.pro
Win32/Debug/ZERO_CHECK/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
src/: CMakeLists.txt  main.lua  settings.lua  string.h  strtok_r.c  strtok_r.h  utf82gbk.c  utf82gbk.h  webqqdicebot.c
src/gllib/: Makefile.am  Makefile.in  alloca.h  alloca.in.h  asnprintf.c  asprintf.c  config.h  errno.h  errno.in.h  fdopen.c  float+.h  float.c  float.in.h  fpucw.h  getpagesize.c  intprops.h  inttypes.h  inttypes.in.h  itold.c  memchr.c  memchr.valgrind  msvc-inval.c  msvc-inval.h  printf-args.c  printf-args.h  printf-parse.c  printf-parse.h  size_max.h  stdbool.in.h  stddef.in.h  stdint.in.h  stdio.h  stdio.in.h  string.in.h  strndup.c  strnlen.c  strtok_r.c  sys_types.in.h  unistd.h  unistd.in.h  (+7 more)
src/gllib/.deps/: asnprintf.Po  asprintf.Po  getpagesize.Po  printf-args.Po  printf-parse.Po  strndup.Po  strnlen.Po  strtok_r.Po  vasnprintf.Po  vasprintf.Po  xsize.Po
src/gllib/sys/: types.h
src/libghttp/: CMakeLists.txt
src/liblwqq/: http.c  http_curl.c  info.c  login.c  md5.c  md5.h  msg.c  msg.h  smemory.c  smemory.h  type.c  type.h
src/luascript/: TALK.lua  bet.lua  dictionary.lua  dnddice.lua  dnddice_detail.lua  escape.lua  fate.lua  fruit.lua  getlink.lua  godmachine.lua  help.lua  knight.lua  ppg.lua  random.lua  rememberip.lua  roll.lua  ronind10.lua  router.lua  rss.lua  scp.lua  seventhsea.lua  tishen.lua  trim.lua  wiki.lua  woddice.lua  zhan.lua
src/win32-dev/libcurl/: build.txt
src/win32-dev/libcurl/lib/pkgconfig/: libcurl.pc
