cmake_minimum_required (VERSION 2.6)
project (webqqdicebot)

find_package(PkgConfig REQUIRED)
#pkg_check_modules(GLIB REQUIRED  glib-2.0)
pkg_check_modules(CURL REQUIRED libcurl)
pkg_check_modules(LUAJIT REQUIRED luajit>=2.0)
if(WIN32)
#pkg_check_modules(ICONV REQUIRED iconv)
endif(WIN32)
#pkg_check_modules(EVENT REQUIRED libevent)
add_definitions(-std=gnu99)
#add_definitions(-O0 -g3 -Wall)

add_subdirectory(src)
